# ComputeStream

./: CMakeLists.txt  README.md
cmake/: FindgRPC.cmake
src/: compute_kernel.proto  http_server.cpp  http_server_restbed.cpp  kernel.cpp  kernel.h  rpc_client.cpp  rpc_server.cpp  server.cpp  server.h
